give hamburger img some blur and rounded off the invisible border radius so the whole things overlays nicely on text also change animation delays to match durations to avoid choppiness

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -43,6 +43,8 @@ button.hamburger {
 button.hamburger img {
   height: 100%;
   width: 100%;
+  backdrop-filter: blur(0.1rem);
+  border-radius: 0.2rem;
 }
 
 .content {
